--- a/style.css
+++ b/style.css
@@ -107,3 +107,21 @@ footer {
   font-size: 0.8rem;
   color: #4e4e4e;
 }
+
+.footer {
+  margin-top: 30px;
+  font-size: 0.8rem;
+  color: #eee9e9;}
+
+button {
+  background-color: #e63946;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+}
