--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header p {
 }
 
 /* Botões */
-.prev, .next {
+.prev{
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -66,6 +66,18 @@ header p {
   color: #fff;
   border-radius: 50%;
 }
+.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0,0,0,0.5);
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  color: #fff;
+  border-radius: 50%;
+}v, 
 
 .prev { left: 10px; }
 .next { right: 10px; }
@@ -111,7 +123,8 @@ footer {
 .footer {
   margin-top: 30px;
   font-size: 0.8rem;
-  color: #eee9e9;}
+  color: #eee9e9;
+position: fixed;}
 
 button {
   background-color: #e63946;
@@ -124,4 +137,17 @@ button {
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 12px;
+}
+
+.btnyes {
+  background-color: #4CAF50; /* Green */
+  margin-left: -155px;
+  position: absolute;
+  margin-top: px;    
+  
+}
+.btnno {
+position: absolute;
+margin-left: 50px;
+margin-top: auto;
 }
